<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:padding="5dp"
        android:text="@string/name_store"
        android:textColor="#000" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/level"
        android:textColor="#000" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/total"
        android:textColor="#000" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/total_in_month"
        android:textColor="#000" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/rev_kyat"
        android:textColor="#000" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:padding="5dp"
        android:text="@string/time"
        android:textColor="#000" />
</LinearLayout>