<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/report_accounting"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <Spinner
            android:id="@+id/spinner_report_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <include layout="@layout/top_row_account" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <include layout="@layout/item_account"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:id="@+id/txt_name_store_acc"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.2"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_level"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_total"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_total_month"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_rev"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_time"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.5"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->
    <!--</LinearLayout>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#000" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/report_store"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <include layout="@layout/top_row_store" />

    <include layout="@layout/item_store"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:id="@+id/txt_name_store"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.2"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_install_total"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_install_month"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.2"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_install_day"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.7"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_rev_month"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.5"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

        <!--<TextView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#000" />-->

        <!--<TextView-->
            <!--android:id="@+id/txt_deposit"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="#000" />-->

    <!--</LinearLayout>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#000" />-->
</LinearLayout>